force-app/main/default/objects/SSP_ClientCaseNote__c/SSP_ClientCaseNote__c.object-meta.xml
<CustomObject>
    <description>This object is used for storing notes against cases</description>
    <label>SSP Client Case Note</label>
    <nameField>
        
        <displayFormat>CCN-{000000000}</displayFormat>
        
        <label>Client Case Notes Number</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>SSP Client Case Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>