force-app/main/default/objects/SSP_ClientCaseNote__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <externalId>true</externalId>
    <label>Application Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>