force-app/main/default/objects/SSP_ClientCaseNote__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>Case Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>