force-app/main/default/objects/SSP_ClientCaseNote__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>