force-app/main/default/objects/SSP_ClientCaseNote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>